<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_bg"
    tools:context=".ui.OnBoardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="casual"
            android:text="@string/welcome_to_our_application_n_you_can_choose_one_of_three_games"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:src="@drawable/img1"
            app:layout_constraintTop_toBottomOf="@id/text"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="casual"
            android:text="@string/you_need_to_quickly_click_on_the_number_that_corresponds_to_the_number_of_toads_on_the_screen"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:layout_editor_absoluteX="20dp" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:src="@drawable/img2"
            app:layout_constraintTop_toBottomOf="@+id/text2"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="casual"
            android:text="@string/you_need_to_find_all_the_green_toads_within_a_certain_time"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/imageView2" />


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:src="@drawable/img3"
            app:layout_constraintTop_toBottomOf="@+id/text3"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="casual"
            android:text="@string/you_need_to_eat_all_the_flies_on_the_screen"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"

            app:layout_constraintTop_toBottomOf="@id/imageView3" />

        <Button
            android:id="@+id/start"
            android:textColor="@color/white"
            android:text="@string/start"
            android:textSize="32sp"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>